--- a/style.css
+++ b/style.css
@@ -1,1 +1,77 @@
+.about{
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
+  background-color: lightblue;
+  }
+  
+  .skate2 {
+  float: left;
+  width: 400px;
+  height: 300px;
+  }
+  
+  .skate {
+  margin-top: 10px;
+  float: left;
+  width: 400px;
+  height: 390px;
+  }
+  
+  .ws {
+  width: 100px;
+  height: 100px;
+  margin: 20px;
+  }
 
+  .tonny {
+    width: 1000px;
+    height: 500px;  
+  }
+
+  .all {
+      font-family: ;
+      font-size: xx-large;
+  }
+
+  .check {
+      font-size: xx-large;
+  }
+
+  footer {
+      background-color: lightblue;
+      width: 1000px;
+      height: 200px;
+  }
+
+  .tel {
+      font-size: large;
+      font-family: sans-serif;
+  }
+
+.skate3 {
+    width: 500px;
+    height: 400px;
+}
+
+.look{
+    line-height: 1;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    float: left;
+}
+
+.killmepls {
+    line-height: 1;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.sb {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.story {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.skaters {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
