--- a/history.css
+++ b/history.css
@@ -1,1 +1,120 @@
+.history {
+    width: 1000px;
+    height: 300px;
+}
 
+.hp {
+    font-size: xx-large;
+}
+
+.hstr {
+    background-color: lightblue;
+}
+
+.hr {
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: xx-large;
+}
+
+.nachalo {
+    font-size: x-large;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+}
+
+.lololo {
+    width: 450px;
+    height: 200px;
+}
+
+.lol {
+    float: right;
+    width: 450px;
+    height: 200px;
+}
+
+.llol{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.sns {
+    font-size: x-large;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.loll{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.lull {
+    width: 450px;
+    height: 200px;
+}
+
+.llul {
+    float: right;
+    width: 450px;
+    height: 200px;
+}
+
+.ens {
+    font-size: x-large;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.st {
+    float: right;
+    width: 450px;
+    height: 200px;
+}
+
+.about{
+
+}
+
+body {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.lll {
+  width: 450px;
+    height: 200px;
+}
+
+.fff {
+    float: right;
+  width: 450px;
+    height: 200px;  
+}
+
+.nns {
+    font-size: x-large;
+}
+
+.sss {
+    float: right;
+    width: 450px;
+    height: 200px;
+}
+
+.kkk {
+    width: 450px;
+    height: 200px;
+}
+
+.tel {
+    font-family: sans-serif;
+    font-size: large;
+}
+
+.ws{
+    width: 100px;
+    height: 100px;
+    margin: 20px;
+    
+}
+
+footer {
+    background-color: lightblue;
+}
